--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "host": "vite --host"
   },
   "dependencies": {
+    "firebase": "^9.15.0",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
