Updated Website Title

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "firebase": "^9.15.0",
+    "firebase-tools": "^11.19.0",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
